feat(order): 관리자 주문 조회에 페이징과 서버 집계를 넣는다
`GET /orders/admin/all` 은 조건 없이 전 주문을 한 번에 돌려줬다. 주문이
쌓일수록 느려지다 죽는데, 죽기 전까지는 잘 도는 것처럼 보인다. 배송 관리
화면은 그 목록을 받아 주문마다 `GET /shipping/{id}` 를 따로 던졌으므로,
화면 한 번 여는 비용이 주문 수에 그대로 비례했다.

- `/orders/admin` — 상태·기간 조건 + page/size. 정렬은
  `created_at DESC, id DESC` 로 고정한다. 동점 처리가 없으면 2쪽에서
  같은 주문이 다시 나오거나 빠진다.
- `/orders/admin/summary` — 같은 조건의 상태별 건수·금액. 페이지에
  잘리지 않는다. 목록만 페이징하고 화면이 그 배열을 계속 세면, 모든 숫자가
  "첫 페이지만 센 값"으로 조용히 바뀐다. 그래서 목록과 집계를 같이 낸다.
- 목록은 id 만 SQL 로 페이징한 뒤 항목을 붙인다. 주문·항목을 조인한 채
  LIMIT 을 걸면 그 수는 주문 수가 아니라 행 수가 된다.
- 조건은 있는 것만 WHERE 로 조립한다. `(? IS NULL OR col = ?)` 관용구는
  PG 가 파라미터를 bytea 로 추론해 42P18 로 터진다.
- JdbcTemplate 은 JPA 의 default_schema 를 따르지 않으므로 SQL 에
  `opslab.` 을 붙였다. 빼도 컴파일·단위테스트는 통과하고 배포 후에 죽는다.
- `LoadOrderPort.findAll()` · `GetOrderUseCase.getAllOrders()` 는 지운다.
  포트에 남겨 두면 다음 사람이 다시 부른다.
- SecurityConfig 는 `/orders/admin`, `/orders/admin/**` 두 줄로 덮는다.
  경로마다 줄을 따로 두면 줄 추가를 잊은 경로만 조용히 샌다.

프론트는 대시보드 카드·상태 막대를 전부 summary 에서 읽고, 목록은 쪽
단위로 받는다. 검색·"출고 전만 보기"는 받아 온 페이지 안에서만 도는
필터라, 화면에 그렇게 적었다. 승인 대기 큐는 두 상태를 서버 조건으로
넘기고, 페이지에 안 담긴 대기 건수를 같이 보여 준다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014uG9RjgxAfp4EaKLqXPAx8